--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "jaimecanarj.github.io",
-  "homepage": "http://jaimecanarj.github.io/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.3.1",
